[tool.poetry]
name = "git"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
gunicorn = "^20.0.4"
Flask = "^1.1.2"
validate-docbr = "^1.8.2"
flasgger = "^0.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
